# kitchen-sink

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
hello/: CMakeLists.txt
hello/src/: hello.cpp
include/: world.hpp
src/: hello.cpp  world.cpp
test/: CMakeLists.txt  run_tests.cpp
world/: CMakeLists.txt
world/include/: world.hpp
world/src/: world.cpp
